crates/test-ui/ui/array_iter_invalid.stderr
error[E0277]: `&mut Retained<NSArray<NSArray>>` is not an iterator
 --> ui/array_iter_invalid.rs
  |
  |     for s in &mut arr {
  |              ^^^^^^^^ `&mut Retained<NSArray<NSArray>>` is not an iterator
  |
  = help: the trait `IntoIterator` is not implemented for `&mut Retained<NSArray<NSArray>>`
  = note: `IntoIterator` is implemented for `&Retained<NSArray<NSArray>>`, but not for `&mut Retained<NSArray<NSArray>>`
help: consider removing the leading `&`-reference
  |
6 -     for s in &mut arr {
6 +     for s in arr {
  |

error[E0277]: `&mut Retained<NSArray<NSMutableArray>>` is not an iterator
 --> ui/array_iter_invalid.rs
  |
  |     for s in &mut arr {
  |              ^^^^^^^^ `&mut Retained<NSArray<NSMutableArray>>` is not an iterator
  |
  = help: the trait `IntoIterator` is not implemented for `&mut Retained<NSArray<NSMutableArray>>`
  = note: `IntoIterator` is implemented for `&Retained<NSArray<NSMutableArray>>`, but not for `&mut Retained<NSArray<NSMutableArray>>`
help: consider removing the leading `&`-reference
  |
11 -     for s in &mut arr {
11 +     for s in arr {
   |

error[E0277]: `&mut Retained<NSMutableArray<NSArray>>` is not an iterator
 --> ui/array_iter_invalid.rs
  |
  |     for s in &mut arr {
  |              ^^^^^^^^ `&mut Retained<NSMutableArray<NSArray>>` is not an iterator
  |
  = help: the trait `IntoIterator` is not implemented for `&mut Retained<NSMutableArray<NSArray>>`
  = note: `IntoIterator` is implemented for `&Retained<NSMutableArray<NSArray>>`, but not for `&mut Retained<NSMutableArray<NSArray>>`
help: consider removing the leading `&`-reference
  |
16 -     for s in &mut arr {
16 +     for s in arr {
   |

error[E0277]: `&mut Retained<NSMutableArray<NSMutableArray>>` is not an iterator
 --> ui/array_iter_invalid.rs
  |
  |     for s in &mut arr {
  |              ^^^^^^^^ `&mut Retained<NSMutableArray<NSMutableArray>>` is not an iterator
  |
  = help: the trait `IntoIterator` is not implemented for `&mut Retained<NSMutableArray<NSMutableArray>>`
  = note: `IntoIterator` is implemented for `&Retained<NSMutableArray<NSMutableArray>>`, but not for `&mut Retained<NSMutableArray<NSMutableArray>>`
help: consider removing the leading `&`-reference
  |
21 -     for s in &mut arr {
21 +     for s in arr {
   |
